# cmake-cpp-starter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
scripts/: build_debug.sh  build_default_debug.sh  build_default_release.sh  build_ninja_debug.sh  build_ninja_release.sh  build_release.sh  link_compile_cmds.sh  run_main.sh  run_tests.sh
src/: CMakeLists.txt  main.cc
src/coffee/: CMakeLists.txt  coffee.cc  coffee.h
src/factorial/: CMakeLists.txt  factorial.cc  factorial.h
src/log/: CMakeLists.txt  log.h
tests/: CMakeLists.txt  test.cc
